2012-06-24  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Duplicated code is removed.

	* x_screen.c, x_window.c: Minor fixes related to GraphicsExpose.

2012-06-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: CSI Ps SP q (0 <= Ps <= 2) is supported.

2012-06-21  Araki Ken  <arakiken@users.sf.net>

	* x_window.[ch]: NoExpose and GraphicsExpose events caused by
	  XCopyArea are processed with wait_copy_area_response flag.

	* x_gc.c, vte.c: Default value of graphics_exposures of GCValue is
	  changed from False to True.

2012-06-13  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_window.c: FocusIn/FocusOut events not only to top windows
	  but also to child ones are processed.
	  (SF Bug #3528838. Thanks to Thomas Wolff)

	* ml_vt100_parser.c: CSI ? 8840 h and CSI ? 8840 l are supported.

	* x_font_config.c: Minor fixes.

2012-06-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, README.cairo: Fixed.

	* x_font_ft.c: If ":percent" is specified in ~/.mlterm/*font, x_off
	  is set to center a character in the cell.

	* x_draw_str.c: If current and next characters are bold or not is checked
	  by the value of ml_char_font() instead of xfont->id.

2012-06-09  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.cairo: Updated.

	* x_screen.c: cursor blinking is stopped in unfocused.

	* xlib/x_font.c, x_font_ft.c, win32/x_font.c, xlib/x_window.c,
	  x_window_cairo.c, x_window_xft.c:
	  - If letter_space is larger than 0, x_off += letter_space / 2 to
	    center a character in the cell.
	  - If x_off is larger than 0, x_window_draw_string*() draws string
	    from x + x_off.

	* x_screen.c, x_font_manager.[ch], x_main_config.[ch], gtk/vte.c:
	  --bdfont / "use_bold_font" option is added.

	* MLTermPty.c: "ssh_x11_forwarding" option is supprted.

	* ml_pty_ssh.c: Minor fixes.

	* version.h.in: 3.1.2 post => 3.1.3 pre

2012-06-06  Araki Ken  <arakiken@users.sf.net>
