@@ -1,4 +1,6 @@
 ver 3.1.3
+* Support CSI [>4;2 m and CSI [>4;0m partially.
+  (Note that sequence from terminal is CSI [<code>;<mod>u, not CSI [27;<mod>;<code>~.)
 * Support OSC 5;0 and OSC 5;1.
 * Support CSI ? 8840 h and CSI ? 8840 l.
 * Support CSI SP q partially.
